argo/eventsources/dockerhub/virtru-public-gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: dockerhub-virtru-public-gateway-eventsource-svc
  namespace: argo-events
  labels:
    run: dockerhub-virtru-public-gateway-eventsource-svc
spec:
  rules:
    - host: dockerhub-virtru-public-gateway-eventsource-svc.mgmt.virtru.com
      http:
        paths:
          - backend:
              serviceName: dockerhub-virtru-public-gateway-eventsource-svc
              servicePort: 12000
            path: /dockerPush
  tls:
    - hosts:
        - dockerhub-virtru-public-gateway-eventsource-svc.mgmt.virtru.com
      secretName: dockerhub-virtru-public-gateway-eventsource-svc-secret
